# omx_moveit_msgs

./: CMakeLists.txt  package.xml
msg/: PickAndPlaceStatus.msg
srv/: ArmPlan.srv  ArmPlanExe.srv
