<package format="3">
	<name>omx_moveit_msgs</name>
  <version>0.3.0</version>
	<description>Messages for OMX</description>

	<license>BSD</license>
  <maintainer email="user@user.user">user</maintainer>
  <depend>geometry_msgs</depend>
  <depend>moveit_task_constructor_core</depend>

	<buildtool_depend>ament_cmake</buildtool_depend>

	<exec_depend>rosidl_default_runtime</exec_depend>

	<build_depend>rosidl_default_generators</build_depend>

	<member_of_group>rosidl_interface_packages</member_of_group>

	<export>
    	<build_type>ament_cmake</build_type>
 	</export>
</package>
